Implemented way to change desktop on linux XFCE
probably won't work in machines different from mine